--- a/services/config-server/src/main/resources/configurations/gateway-service.yml
+++ b/services/config-server/src/main/resources/configurations/gateway-service.yml
@@ -13,5 +13,9 @@ spring:
           uri: lb:http://EMPLOYE-SERVICE
           predicates:
             - Path=/api/v1/employes/**
+        - id: employe-service
+          uri: lb:http://POST-SERVICE
+          predicates:
+            - Path=/api/v1/posts/**
 server:
   port: 8222
