--- a/services/config-server/src/main/resources/configurations/employe-service.yml
+++ b/services/config-server/src/main/resources/configurations/employe-service.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: employe-service
   datasource:
     url: jdbc:postgresql://localhost:5432/employe
     username: isi
@@ -9,12 +11,10 @@ spring:
       ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-
 server:
   port: 2221
 application:
   config:
     departement-url: http://localhost:8222/api/v1/departements
     post-url: http://localhost:8222/api/v1/posts
-#    payement-url: http://localhost:8222/api/v1/payements
-#    produit-url: http://localhost:8222/api/v1/produits
+
