--- a/services/employe/src/main/resources/application.yml
+++ b/services/employe/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: "http://localhost:1010/realms/micro-services"
   application:
     name: employe-service
   config:
